Add code to determine OS and provide link respectively (commented out in main.js until alpha is out)

--- a/index.html
+++ b/index.html
@@ -99,10 +99,17 @@
 
         <div class="container horizontal">
             <div class="row">
-                <div class="twelvecol last">
+                <div class="twelvecol last download">
+
+
                     <p>
                         <b>Gisto</b> will soon be avaliable on: Windows, OSX and Linux
                     </p>
+                    <p class="smaller">
+                        Alpha version is on the way.
+                    </p>
+
+
                 </div>
             </div>
         </div>
@@ -116,6 +123,7 @@
             <span class='st_twitter_hcount' displayText='Tweet' st_url="http://www.gistoapp.com" st_title="Gisto - Cross-platform gist snippets management desktop application #gistoapp"></span>
             <span class='st_facebook_hcount' displayText='Facebook' st_title="Gisto - Cross-platform gist snippets management desktop application #gistoapp"></span>
             <span class='st_googleplus_hcount' displayText='Google +' st_title="Gisto - Cross-platform gist snippets management desktop application #gistoapp"></span>
+
             </div>
 
             <div class="row">
