--- a/index.html
+++ b/index.html
@@ -213,14 +213,20 @@
 
         </div>
 
-
+        <a name="download"></a>
         <div class="container footer" id="footer">
             <div class="row">
                 <div class="sixcol">
                     <h1>Application status</h1>
-                    <p class="light" >Gisto is not yet officially released to the public.
-                        It is currently heavily developed. Various features will be left out from the first release.</p>
-                    <p>We are planing to release the first version very soon and add new features as quickly as possible.</p>
+                    <p class="light" >Current build: Alpha 0.1.0a.</p>
+                    <p>Download here for Windows, OSX And Linux</p>
+                    <p class="download-links">
+                        <a class="btn links align-center" href="download/0.1.0a/Gisto-0.1.0a-Win_x86.exe"><i class="icon-download-alt"></i> Download for <br /> Windows</a>
+                        <a class="btn links align-center" href="download/0.1.0a/Gisto-0.1.0a-OSX_x86.dmg"><i class="icon-download-alt"></i> Download for <br /> OSX 10.7+</a>
+                        <br />
+                        <a class="btn links align-center" href="download/0.1.0a/Gisto-0.1.0a-Linux_x86.tar.gz"><i class="icon-download-alt"></i> Download for <br /> Linux 64bit</a>
+                        <a class="btn links align-center" href="download/0.1.0a/Gisto-0.1.0a-Linux_x86_64.tar.gz"><i class="icon-download-alt"></i> Download for <br /> Linux 32bit</a>
+                    </p>
                 </div>
                 <div class="sixcol last">
                     <h1>Who and why</h1>
