Fixed hash slider for other platforms

--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@
 
         </div>
 
-        <a name="download"></a>
-        <div class="container footer" id="footer">
+        <div class="container footer" id="footer" id="download">
             <div class="row">
                 <div class="sixcol">
                     <h1>Application status</h1>
