Changed windows download to zip apprently github does not support downloading exe files

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <p class="light" >Current build: Alpha 0.1.0a.</p>
                     <p>Download here for Windows, OSX And Linux</p>
                     <p class="download-links">
-                        <a onclick="ga.push(['trackPageview', 'download']);" class="btn links align-center" href="download/0.1.0a/Gisto-0.1.0a-Win_x86.exe"><i class="icon-download-alt"></i> Download for <br /> Windows</a>
+                        <a onclick="ga.push(['trackPageview', 'download']);" class="btn links align-center" href="download/0.1.0a/Gisto-0.1.0a-Win_x86.zip"><i class="icon-download-alt"></i> Download for <br /> Windows</a>
                         <a onclick="ga.push(['trackPageview', 'download']);" class="btn links align-center" href="download/0.1.0a/Gisto-0.1.0a-OSX_x86.dmg"><i class="icon-download-alt"></i> Download for <br /> OSX 10.7+</a>
                         <br />
                         <a onclick="ga.push(['trackPageview', 'download']);" class="btn links align-center" href="download/0.1.0a/Gisto-0.1.0a-Linux_x86.tar.gz"><i class="icon-download-alt"></i> Download for <br /> Linux 64bit</a>
