--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
                 <a href="/" class="threecol logo">
                     <h1>&lt;/Gisto&gt;</h1>
                 </a>
-                <a href="#footer" class="threecol links">
+                <a href="#footer" class="threecol innsite links">
                     About
                 </a>
-                <a href="#features" class="threecol links">
+                <a href="#features" class="threecol innsite links">
                     Features
                 </a>
 
-                <a href="#contact" class="threecol links last">
+                <a href="#contact" class="threecol innsite links last">
                     Contact
                 </a>
             </div>
