--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8" />
-        <title>Gisto | Snippets made awesome | Manage your guthub gists</title>
+        <title>Gisto | Snippets made awesome | Manage your github gists on desktop</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Cross-platform gist snippets management desktop application that allows you and your team share code snippets fast and easily.">
