--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
         _gas.push(['_gasTrackMaxScroll']);
         _gas.push(['_gasTrackDownloads', {
             category: 'Gisto Downloads',
-            extensions: 'dmg,gz,tar.gz'
+            extensions: 'dmg,gz'
         }]);
+        /*
         _gas.push(['_gasTrackYoutube', {force: true}]);
         _gas.push(['_gasTrackVimeo', {force: true}]);
         _gas.push(['_gasTrackMailto']);
+        */
 
         (function() {
             var ga = document.createElement('script');
