* Update font awesome. * Redesigned download buttons a bit.

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
                         connecting your GitHub account!</p>
                     <a class="btn links innsite" href="#footer">Learn more </a>
                     <a class="btn links" href="https://github.com/Gisto/Gisto"><i class="icon-github-alt"></i> GitHub</a>
+                    <i class="icon-windows txt_wight"></i>
+                    <i class="icon-apple txt_wight"></i>
+                    <i class="icon-linux txt_wight"></i>
                 <br />
                 </div>
                 <div class="sixcol last">
@@ -237,11 +240,11 @@
                     <p class="light" >Current build: Alpha 0.1.1a | 2013-06-13</p>
                     <p>Download here for Windows, OSX And Linux</p>
                     <p class="download-links">
-                        <a class="btn links align-center" href="download/0.1.1a/Gisto-0.1.1a-Win_x86.zip"><i class="icon-download-alt"></i> Download for <br /> Windows</a>
-                        <a class="btn links align-center" href="download/0.1.1a/Gisto-0.1.1a-OSX_x86.dmg"><i class="icon-download-alt"></i> Download for <br /> OSX 10.7+</a>
+                        <a class="btn links align-center" href="download/0.1.1a/Gisto-0.1.1a-Win_x86.zip"><i class="icon-windows icon-3x down-os"></i> Download for <br /> <strong>Windows</strong></a>
+                        <a class="btn links align-center" href="download/0.1.1a/Gisto-0.1.1a-OSX_x86.dmg"><i class="icon-apple icon-3x down-os"></i> Download for <br /> <strong>OSX 10.7+</strong></a>
                         <br />
-                        <a class="btn links align-center" href="download/0.1.1a/Gisto-0.1.1a-Linux_x86_64.tar.gz"><i class="icon-download-alt"></i> Download for <br /> Linux 64bit</a>
-                        <a class="btn links align-center" href="download/0.1.1a/Gisto-0.1.1a-Linux_x86.tar.gz"><i class="icon-download-alt"></i> Download for <br /> Linux 32bit</a>
+                        <a class="btn links align-center" href="download/0.1.1a/Gisto-0.1.1a-Linux_x86_64.tar.gz"><i class="icon-linux icon-3x down-os"></i> Download for <br /> <strong>Linux 64bit</strong></a>
+                        <a class="btn links align-center" href="download/0.1.1a/Gisto-0.1.1a-Linux_x86.tar.gz"><i class="icon-linux icon-3x down-os"></i> Download for <br /> <strong>Linux 32bit</strong></a>
                     </p>
                 </div>
                 <div class="sixcol last">
