--- a/index.html
+++ b/index.html
@@ -31,26 +31,21 @@
             shorten:false
         });</script>
     </head>
-    <script type="text/javascript">
-        var _gas = _gas || [];
-        _gas.push(['_setAccount', 'UA-40972813-1']); // REPLACE WITH YOUR GA NUMBER
-        _gas.push(['_setDomainName', '.gistoapp.com']); // REPLACE WITH YOUR DOMAIN
-        _gas.push(['_trackPageview']);
-        _gas.push(['_gasTrackOutboundLinks']);
-        _gas.push(['_gasTrackMaxScroll']);
-        _gas.push(['_gasTrackDownloads', {
-            extensions: 'dmg,gz,zip'
-        }]);
 
-        (function() {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = '//cdnjs.cloudflare.com/ajax/libs/gas/1.10.1/gas.min.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
+    <script type="text/javascript">//<![CDATA[
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-40972813-1']);
+    _gaq.push(['_trackPageview']);
+    (function () {
+        var ga = document.createElement('script');
+        ga.type = 'text/javascript';
+        ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(ga, s);
+    })();
+    //]]></script>
 
     <body>
 
@@ -230,14 +225,14 @@
             <div class="row">
                 <div class="sixcol">
                     <h1>Application status</h1>
-                    <p class="light" >Current build: Alpha 0.1.1a | 2013-06-13</p>
+                    <p class="light" >Current build: Alpha 0.1.2a | 2013-06-21</p>
                     <p>Download here for Windows, OSX And Linux</p>
                     <p class="download-links">
-                        <a class="btn links align-center" href="download/0.1.1a/Gisto-0.1.1a-Win_x86.zip"><i class="icon-windows icon-3x down-os"></i> Download for <br /> <strong>Windows</strong></a>
-                        <a class="btn links align-center" href="download/0.1.1a/Gisto-0.1.1a-OSX_x86.dmg"><i class="icon-apple icon-3x down-os"></i> Download for <br /> <strong>OSX 10.7+</strong></a>
+                        <a class="btn links align-center download-link" href="download/0.1.2a/Gisto-0.1.2a-Win_x86.zip"><i class="icon-windows icon-3x down-os"></i> Download for <br /> <strong>Windows</strong></a>
+                        <a class="btn links align-center download-link" href="download/0.1.2a/Gisto-0.1.2a-OSX_x86.dmg"><i class="icon-apple icon-3x down-os"></i> Download for <br /> <strong>OSX 10.7+</strong></a>
                         <br />
-                        <a class="btn links align-center" href="download/0.1.1a/Gisto-0.1.1a-Linux_x86_64.tar.gz"><i class="icon-linux icon-3x down-os"></i> Download for <br /> <strong>Linux 64bit</strong></a>
-                        <a class="btn links align-center" href="download/0.1.1a/Gisto-0.1.1a-Linux_x86.tar.gz"><i class="icon-linux icon-3x down-os"></i> Download for <br /> <strong>Linux 32bit</strong></a>
+                        <a class="btn links align-center download-link" href="download/0.1.2a/Gisto-0.1.2a-Linux_x86_64.tar.gz"><i class="icon-linux icon-3x down-os"></i> Download for <br /> <strong>Linux 64bit</strong></a>
+                        <a class="btn links align-center download-link" href="download/0.1.2a/Gisto-0.1.2a-Linux_x86.tar.gz"><i class="icon-linux icon-3x down-os"></i> Download for <br /> <strong>Linux 32bit</strong></a>
                     </p>
                 </div>
                 <div class="sixcol last">
