* Removed old install versions * Add twitter follow button * Changed the buttons style a bit.

--- a/index.html
+++ b/index.html
@@ -76,11 +76,10 @@
                         fast and easily.</p>
                     <p>Based on GitHub Gists Infrastructure which means you can use all your existing snippets by
                         connecting your GitHub account!</p>
-                    <a class="btn links innsite" href="#footer">Learn more </a>
+                    <a class="btn links innsite" href="#footer"><i class="icon-info-sign"></i> Learn more </a>
                     <a class="btn links" href="https://github.com/Gisto/Gisto"><i class="icon-github-alt"></i> GitHub</a>
-                    <i class="icon-windows txt_wight"></i>
-                    <i class="icon-apple txt_wight"></i>
-                    <i class="icon-linux txt_wight"></i>
+                    <a class="btn links btn_twitter" href="https://twitter.com/gistoapp"><i class="icon-twitter"></i> Follow <b>@GistoApp</b> updates</a>
+
                 <br />
                 </div>
                 <div class="sixcol last">
@@ -228,11 +227,11 @@
                     <p class="light" >Current build: Alpha 0.1.2a | 2013-06-21</p>
                     <p>Download here for Windows, OSX And Linux</p>
                     <p class="download-links">
-                        <a class="btn links align-center download-link" href="download/0.1.2a/Gisto-0.1.2a-Win_x86.zip"><i class="icon-windows icon-3x down-os"></i> Download for <br /> <strong>Windows</strong></a>
-                        <a class="btn links align-center download-link" href="download/0.1.2a/Gisto-0.1.2a-OSX_x86.dmg"><i class="icon-apple icon-3x down-os"></i> Download for <br /> <strong>OSX 10.7+</strong></a>
+                        <a class="btn links align-center download-link" href="download/Gisto-0.1.2a-Win_x86.zip"><i class="icon-windows icon-3x down-os"></i> Download for <br /> <strong>Windows</strong></a>
+                        <a class="btn links align-center download-link" href="download/Gisto-0.1.2a-OSX_x86.dmg"><i class="icon-apple icon-3x down-os"></i> Download for <br /> <strong>OSX 10.7+</strong></a>
                         <br />
-                        <a class="btn links align-center download-link" href="download/0.1.2a/Gisto-0.1.2a-Linux_x86_64.tar.gz"><i class="icon-linux icon-3x down-os"></i> Download for <br /> <strong>Linux 64bit</strong></a>
-                        <a class="btn links align-center download-link" href="download/0.1.2a/Gisto-0.1.2a-Linux_x86.tar.gz"><i class="icon-linux icon-3x down-os"></i> Download for <br /> <strong>Linux 32bit</strong></a>
+                        <a class="btn links align-center download-link" href="download/Gisto-0.1.2a-Linux_x86_64.tar.gz"><i class="icon-linux icon-3x down-os"></i> Download for <br /> <strong>Linux 64bit</strong></a>
+                        <a class="btn links align-center download-link" href="download/Gisto-0.1.2a-Linux_x86.tar.gz"><i class="icon-linux icon-3x down-os"></i> Download for <br /> <strong>Linux 32bit</strong></a>
                     </p>
                 </div>
                 <div class="sixcol last">
