Made changes for v0.1.3a + new urls as download.gistoapp.com

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+menu: home
 title: Gisto | Snippets made awesome | Manage your github gists on desktop
 ---
 
@@ -157,11 +158,11 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
             <p class="light" >Current build: {{ site.gisto_version }} | {{ site.gisto_build_date }}</p>
             <p>Download here for Windows, OSX And Linux</p>
             <p class="download-links">
-                <a class="btn links align-center download-link" href="download/Gisto-{{ site.gisto_version }}-Win_x86.zip"><i class="icon-windows icon-3x down-os"></i> Download for <br /> <strong>Windows</strong></a>
-                <a class="btn links align-center download-link" href="download/Gisto-{{ site.gisto_version }}-OSX_x86.dmg"><i class="icon-apple icon-3x down-os"></i> Download for <br /> <strong>OSX 10.7+</strong></a>
+                <a class="btn links align-center download-link" href="{{ site.download_url }}/Gisto-{{ site.gisto_version }}-Win_x86.zip"><i class="icon-windows icon-3x down-os"></i> Download for <br /> <strong>Windows</strong></a>
+                <a class="btn links align-center download-link" href="{{ site.download_url }}/Gisto-{{ site.gisto_version }}-OSX_x86.dmg"><i class="icon-apple icon-3x down-os"></i> Download for <br /> <strong>OSX 10.7+</strong></a>
                 <br />
-                <a class="btn links align-center download-link" href="download/Gisto-{{ site.gisto_version }}-Linux_x86_64.tar.gz"><i class="icon-linux icon-3x down-os"></i> Download for <br /> <strong>Linux 64bit</strong></a>
-                <a class="btn links align-center download-link" href="download/Gisto-{{ site.gisto_version }}-Linux_x86.tar.gz"><i class="icon-linux icon-3x down-os"></i> Download for <br /> <strong>Linux 32bit</strong></a>
+                <a class="btn links align-center download-link" href="{{ site.download_url }}/Gisto-{{ site.gisto_version }}-Linux_x86_64.tar.gz"><i class="icon-linux icon-3x down-os"></i> Download for <br /> <strong>Linux 64bit</strong></a>
+                <a class="btn links align-center download-link" href="{{ site.download_url }}/Gisto-{{ site.gisto_version }}-Linux_x86.tar.gz"><i class="icon-linux icon-3x down-os"></i> Download for <br /> <strong>Linux 32bit</strong></a>
             </p>
         </div>
         <div class="sixcol last">
