Final version for v0.1.3a release

--- a/changelog/index.html
+++ b/changelog/index.html
@@ -37,6 +37,12 @@ title: Gisto | Changelog
 
             <p> - Small UI fixes.</p>
 
+            <p> - Updated angular UI to angular-ui utils 0.0.3.</p>
+
+            <p> - Updated starred gists to update only when gists finished loading.</p>
+
+            <p> - Improved efficiency when loading multiple gist pages.</p>
+
             <h2 id="v0.1.2a">0.1.2a</h2>
 
             <p> - Added version checker</p>
