Preparation for new version of Gisto

--- a/changelog/index.html
+++ b/changelog/index.html
@@ -16,7 +16,8 @@ title: Gisto | Changelog
     <div class="row">
 
         <div class="fourcol">
-            <h2>Versions</h2>
+           <h2>Versions</h2>
+			<a href="#v0.2.0b">0.2.2b</a><br/>
             <a href="#v0.1.3a">0.1.3a</a><br/>
             <a href="#v0.1.2a">0.1.2a</a><br/>
             <a href="#v0.1.1a">0.1.1a</a><br/>
@@ -25,6 +26,18 @@ title: Gisto | Changelog
 
         <div class="eightcol last">
 
+			<h2 id="v0.2.2b">0.2.0b</h2>
+			
+			<p> - Send gist between gisto installations, users with gisto will be notified and be able to fork or preview sent gist.</p>
+			<p> - Open gist in <a target="_blank" href="http://plnkr.co/">plunker</a></p>
+			<p> - Settings can now be used to set font size for editor editor.</p>
+			<p> - Editors height are sized to the number of lines in the files in the gist (can be altered from the "settings" screen).</p>
+			<p> - Files in gist can be easily navigated from from dropdown.</p>
+			<p> - Copy 'embed' code to clipboard.</p>
+			<p> - Redused network requests to GitHub API.</p>
+			<p> - Minor UI and bug fixes.</p>
+			
+			
             <h2 id="v0.1.3a">0.1.3a</h2>
 
             <p> - Added indication to gist list for stared gists.</p>
