--- a/index.html
+++ b/index.html
@@ -148,6 +148,12 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
             <img class="feat-pic" alt="Gisto" src="img/search.png" />
         </div>
     </div>
+    
+    <div class="row">
+    	<div class="twelvecol center last">
+    		<a class="btn links btn_more" href="/features"><i class="icon-tasks"></i> <b>All</b> features &raquo;</a>
+    	</div>
+    </div>
 
 </div>
 
