Made changes for v0.2.1b

--- a/changelog/index.html
+++ b/changelog/index.html
@@ -17,7 +17,8 @@ title: Gisto | Changelog
 
         <div class="fourcol">
            <h2>Versions</h2>
-			<a href="#v0.2.0b">0.2.0b</a><br/>
+            <a href="#v0.2.1b">0.2.1b</a><br/>
+            <a href="#v0.2.0b">0.2.0b</a><br/>
             <a href="#v0.1.3a">0.1.3a</a><br/>
             <a href="#v0.1.2a">0.1.2a</a><br/>
             <a href="#v0.1.1a">0.1.1a</a><br/>
@@ -26,7 +27,14 @@ title: Gisto | Changelog
 
         <div class="eightcol last">
 
-			<h2 id="v0.2.2b">0.2.0 beta</h2>
+            <h2 id="v0.2.1b">0.2.1 beta</h2>
+
+            <p> - Bugfix: edit mode now exits properly when logging out inside edit mode.</p>
+            <p> - Bugfix: Fixed bug with gists not saving properly when adding new files to gists at some cases.</p>
+            <p> - Modification: Changed discard notification icon to a trash can to better visualize the intent of the button.</p>
+            <p> - Feature: Added 2-factor-authentication (2FA) support to support new GitHub functionality.</p>
+
+			<h2 id="v0.2.0b">0.2.0 beta</h2>
 <br />
             <h4>What's new?</h4>
 
