Fix for mobiles

--- a/faq/index.html
+++ b/faq/index.html
@@ -17,8 +17,10 @@ title: Gisto | Frequently asked questions
 
         <div class="fourcol">
             <h2>TOC</h2>
-            <a href="#q1">What's under the `hood`?</a><br/>
-            <a href="#q2">Intro</a><br/>
+            <ul>
+                <li><a href="#q2">Intro</a></li>
+                <li><a href="#q1">What's under the `hood`?</a></li>
+            </ul>
         </div>
 
         <div class="eightcol last">
