--- a/changelog/index.html
+++ b/changelog/index.html
@@ -17,12 +17,17 @@ title: Gisto | Changelog
 
         <div class="fourcol">
            <h2>Versions</h2>
-            <a href="#v0.2.1b">0.2.1b</a><br/>
-            <a href="#v0.2.0b">0.2.0b</a><br/>
-            <a href="#v0.1.3a">0.1.3a</a><br/>
-            <a href="#v0.1.2a">0.1.2a</a><br/>
-            <a href="#v0.1.1a">0.1.1a</a><br/>
-            <a href="#v0.1.3a">0.1.0a</a>
+
+            <ul>
+                <li><a href="#v0.2.1b">0.2.1b</a></li>
+                <li><a href="#v0.2.0b">0.2.0b</a></li>
+                <li><a href="#v0.1.3a">0.1.3a</a></li>
+                <li><a href="#v0.1.2a">0.1.2a</a></li>
+                <li><a href="#v0.1.1a">0.1.1a</a></li>
+                <li><a href="#v0.1.3a">0.1.0a</a></li>
+                <li></li>
+            </ul>
+
         </div>
 
         <div class="eightcol last">
