--- a/index.html
+++ b/index.html
@@ -1,196 +1,141 @@
----
-layout: default
-menu: home
-title: Gisto | Snippets made awesome | Manage your github gists on desktop
----
+<!DOCTYPE html>
+<html data-wf-site="524b0c4c20cc877c19000161">
+<head>
+    <meta charset="utf-8">
+    <title>Gisto | Snippets made awesome | Manage your github gists on desktop</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/webflow.css">
+    <link rel="stylesheet" type="text/css" href="css/gisto.webflow.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+    <script>
+        WebFont.load({
+            google: {
+                families: ["Open Sans:300,400,600,700,800"]
+            }
+        });
+    </script>
+</head>
+<body>
 
-<div class="container hero">
-    <div class="row">
-        <div class="sixcol">
-            <h1>Snippets made awesome</h1>
-            <p>Gisto is a Cross-platform gist snippets management desktop application that allows you and your team share code snippets
-                fast and easily.</p>
-            <p>Based on GitHub Gists Infrastructure which means you can use all your existing snippets by
-                connecting your GitHub account!</p>
-            <a class="btn links innsite" href="#footer"><i class="icon-info-sign"></i> Learn more </a>
-            <a class="btn links" href="https://github.com/Gisto/Gisto"><i class="icon-github-alt"></i> GitHub</a>
-            <a class="btn links btn_twitter" href="https://twitter.com/gistoapp"><i class="icon-twitter"></i> Follow <b>@GistoApp</b> updates</a>
 
-            <br />
+<header class="section header">
+
+    <div class="header">
+        <h1><strong>&lt;/Gisto&gt;</strong></h1>
+    </div>
+
+    <div class="w-container">
+        <div class="w-row">
+            <nav class="w-col w-col-12 w-clearfix nav-column">
+                <a class="nav-link" href="#" target="_self">Home</a>
+                <a class="nav-link" href="#" target="_self">Features</a>
+                <a class="nav-link" href="#" target="_self">Documentation</a>
+                <a class="nav-link" href="#" target="_self">FAQ</a>
+                <a class="nav-link nav-link-download" href="#" target="_self">Download</a>
+            </nav>
         </div>
-        <div class="sixcol last">
+    </div>
+</header>
 
 
-            <div class="cycle-slideshow"
-                 data-cycle-fx=fade
-                 data-cycle-timeout=4000
-                 data-cycle-caption="#alt-caption"
-                 data-cycle-caption-template="{{alt}}"
-                    >
-                <img src="img/lite_theme.png" alt="Light theme - default">
-                <img src="img/dark_theme.png" alt="Dark theme">
+<section>
+
+    <div class="under-nav">
+        <h1>Snippets Made Awesome</h1>
+
+        <div class="w-container">
+            <div class="w-row">
+                <div class="w-col w-col-6 w-clearfix">
+                    <p>Gisto is a Cross-platform gist snippets management desktop application that allows you and your
+                        team share code snippets fast and easily. Based on GitHub Gists Infrastructure which means you
+                        can use all your existing snippets by connecting your GitHub account!</p>
+                    <button class="bg-grey txt-white"><i class="icon-github"></i> GitHub</button>
+                    <button class="bg-sky txt-white"><i class="icon-twitter"></i> Twitter</button>
+                    <button class="bg-grey txt-white">Read more <i class="icon-arrow-right"></i></button>
+                </div>
+                <div class="w-col w-col-6 w-clearfix">
+                    <img src="images/gisto.png">
+                </div>
             </div>
-            <div id="alt-caption" class="center"></div>
-
-
         </div>
     </div>
 
+</section>
 
-</div>
 
-<div class="container horizontal">
-    <div class="row">
-        <div class="twelvecol last download">
+<section class="boxes">
+    <div class="w-container">
+        <div class="w-row">
+            <a href="#" class="w-col w-col-4 w-clearfix box bg-grey txt-white uppercase">
+                <i class="icon-fire-extinguisher icon-4x pull-left"></i>
 
-            <a class="btn links innsite" href="#footer">View download options</a>
-            <!--
+                <h3>Features</h3>
+                <span>
+                    <i>List of features and additions</i> <i class="icon-chevron-right"></i>
+                </span>
+            </a>
+            <a href="#" class="w-col w-col-4 w-clearfix box bg-greyer txt-white uppercase">
+                <i class="icon-laptop icon-4x pull-left"></i>
+
+                <h3>Multi-platform</h3>
+                <span>
+                    <i>Avaliable on Windows, Linux and OSX</i> <i class="icon-chevron-right"></i>
+                </span>
+            </a>
+            <a href="#" class="w-col w-col-4 w-clearfix box bg-tomato txt-white uppercase">
+                <i class="icon-download-alt icon-4x pull-left"></i>
+
+                <h3>Download</h3>
+                <span>
+                    <i>Downloads, mirrors and prev. versions</i> <i class="icon-chevron-right"></i>
+                </span>
+            </a>
+        </div>
+    </div>
+</section>
+
+<section class="whiter boxes">
+
+    <h2>A bit about Gisto ...</h2>
+
+    <div class="w-container">
+        <div class="w-row">
+
+            <div class="w-col w-col-4 w-clearfix">
+                <h3>The <b>why</b></h3>
+
+                <p>Gisto started as an attempt to fulfill the lack of a syntax highlighted and cloud synchronized code
+                    snippet solution.</p>
+            </div>
+
+            <div class="w-col w-col-4 w-clearfix">
+                <h3>The <b>how</b></h3>
+
+                <p>Based on GitHub Gists Infrastructure which means you can use all your existing snippets by connecting
+                    your GitHub account!</p>
+            </div>
+
+            <div class="w-col w-col-4 w-clearfix">
+                <h3>The <b>who</b></h3>
+
                 <p>
-                    <b>Gisto</b> will soon be avaliable on: Windows, OSX and Linux
+                    Gisto is developed by a team of two web developers and uses web standard technologies such as HTML5
+                    and JavaScript.
                 </p>
-                <p class="smaller">
-                    Alpha version is on the way.
-                </p>
-            -->
+
+            </div>
+
         </div>
     </div>
-</div>
+</section>
 
-<div class="container features" id="features">
 
-    <div class="container align-center">
-        <span class='st_twitter_hcount' displayText='Tweet' st_url="http://www.gistoapp.com" st_title="Gisto - Cross-platform gist snippets management desktop application #gistoapp"></span>
-        <span class='st_facebook_hcount' displayText='Facebook' st_title="Gisto - Cross-platform gist snippets management desktop application #gistoapp"></span>
-        <span class='st_googleplus_hcount' displayText='Google +' st_title="Gisto - Cross-platform gist snippets management desktop application #gistoapp"></span>
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 
-    </div>
 
-    <div class="row">
-        <div class="onecol"></div>
-        <div class="sixcol">
-            <h1><i class="icon-github"></i> GitHub Integration</h1>
-            <p>
-                Gisto works on GitHub infrastructure, everything you do at Gisto is automatically updated at GitHub.
-            </p>
-            <p>
-                If you don't have access to your computer you can browse normally at GitHub to get all you need.
-            </p>
-        </div>
-        <div class="fourcol last">
-            <img alt="Gisto" class="feat-pic" src="img/Octocat.png" />
-        </div>
-        <div class="separator"></div>
-    </div>
-
-    <div class="row">
-        <div class="onecol"></div>
-        <div class="fourcol">
-            <img class="feat-pic" alt="Gisto" alt="Gisto" src="img/tagging.png" />
-        </div>
-        <div class="sixcol last">
-            <h1><i class="icon-tags"></i> Gist tagging</h1>
-            <p>
-                Gisto allows to tag each gist with unlimited number of tags.
-            </p>
-            <p>
-                Tags can be used for simply sorting gist snippets into groups for what makes it easy to search and maintain.
-            </p>
-        </div>
-        <div class="separator"></div>
-    </div>
-
-    <div class="row">
-        <div class="onecol"></div>
-        <div class="sixcol">
-            <h1><i class="icon-bolt"></i> Quick Editing</h1>
-            <p>
-                Gisto contains rich code editors, for editing on the go just when you need that quick change and don't want to open your development environment.
-            </p>
-            <p>
-                Drag and drop support for files right inside Gisto! just drag files to the application to create a gist.
-            </p>
-        </div>
-        <div class="fourcol last">
-            <img class="feat-pic" alt="Gisto" src="img/edit.png" />
-        </div>
-        <div class="separator"></div>
-    </div>
-
-    <div class="row">
-        <div class="onecol"></div>
-        <div class="fourcol">
-            <img class="feat-pic" alt="Gisto" src="img/offline.png" />
-        </div>
-        <div class="sixcol last">
-            <h1><i class="icon-off"></i> Open gist with</h1>
-            <p>
-                Open gist on gist.github.com, copy file from a gist to clipboard, Copy &lt;embed&gt; code to clipboard,
-                open gist in plunker and more...
-            </p>
-        </div>
-        <div class="separator"></div>
-    </div>
-
-    <div class="row">
-        <div class="onecol"></div>
-        <div class="sixcol">
-            <h1><i class="icon-search"></i> Search</h1>
-            <p>
-                Gists can be filtered by search filter from within the application.
-            </p>
-            <p>
-                Searching criteria may be gist's description, file name / extention, tag or by public/secret status of a gist.
-            </p>
-        </div>
-        <div class="fourcol last">
-            <img class="feat-pic" alt="Gisto" src="img/search.png" />
-        </div>
-    </div>
-    
-    <div class="row">
-    	<div class="twelvecol center last">
-    		<a class="btn links btn_more" href="/features"><i class="icon-tasks"></i> <b>All</b> features &raquo;</a>
-    	</div>
-    </div>
-
-</div>
-
-<div class="container footer" id="footer">
-    <div class="row">
-        <div class="sixcol">
-            <h1>Application status</h1>
-            <p>Gisto is just grew up to a beta.</p>
-            <p class="light" >Current build: {{ site.gisto_version }} | {{ site.gisto_build_date }}</p>
-            <p>Download here for Windows, OSX And Linux</p>
-            <p class="download-links">
-                <a class="btn links align-center download-link" href="{{ site.download_url }}/Gisto-{{ site.gisto_version }}-Win_x86.zip"><i class="icon-windows icon-3x down-os"></i> Download for <br /> <strong>Windows</strong></a>
-                <a class="btn links align-center download-link" href="{{ site.download_url }}/Gisto-{{ site.gisto_version }}-OSX_x86.dmg"><i class="icon-apple icon-3x down-os"></i> Download for <br /> <strong>OSX 10.7+</strong></a>
-                <br />
-                <a class="btn links align-center download-link" href="{{ site.download_url }}/Gisto-{{ site.gisto_version }}-Linux_x86_64.tar.gz"><i class="icon-linux icon-3x down-os"></i> Download for <br /> <strong>Linux 64bit</strong></a>
-                <a class="btn links align-center download-link" href="{{ site.download_url }}/Gisto-{{ site.gisto_version }}-Linux_x86.tar.gz"><i class="icon-linux icon-3x down-os"></i> Download for <br /> <strong>Linux 32bit</strong></a>
-            </p>
-
-<hr />
-            <a class="download-meta" href="/download/">Older versions &amp; Mirror</a>
-            <a class="download-meta archive" href="/changelog/">Change log</a>
-
-<div class="clear"></div>
-
-            <ul class="older">
-                <li><a href="{{ site.download_url }}/Gisto-{{ site.gisto_old_version }}-OSX_x86.dmg">Gisto-{{ site.gisto_old_version }}-OSX_x86.dmg</a></li>
-                <li><a href="{{ site.download_url }}/Gisto-{{ site.gisto_old_version }}-Win_x86.zip">Gisto-{{ site.gisto_old_version }}-Win_x86.zip</a></li>
-                <li><a href="{{ site.download_url }}/Gisto-{{ site.gisto_old_version }}-Linux_x86.tar.gz">Gisto-{{ site.gisto_old_version }}-Linux_x86.tar.gz</a></li>
-                <li><a href="{{ site.download_url }}/Gisto-{{ site.gisto_old_version }}-Linux_x86_64.tar.gz">Gisto-{{ site.gisto_old_version }}-Linux_x86_64.tar.gz</a></li>
-            </ul>
-
-        </div>
-        <div class="sixcol last">
-            <h1>Who and why</h1>
-            <p class="light" >Gisto started as an attempt to fulfill the lack of a syntax highlighted and cloud synchronized code snippet solution.</p>
-
-            <p>
-                Gisto is developed by a team of two web developers and uses web standard technologies such as HTML5 and JavaScript.
-            </p>
-        </div>
-    </div>
-</div>
+</body>
+</html>
