--- a/index1.html
+++ b/index1.html
@@ -44,27 +44,25 @@
 <section>
 
     <div class="under-nav">
+
+
         <h1>Snippets Made Awesome</h1>
 
         <div class="w-container">
             <div class="w-row">
-                <div class="w-col w-col-6 w-clearfix">
+                <div class="w-col w-col-12 w-clearfix">
                     <p>Gisto is a Cross-platform gist snippets management desktop application that allows you and your
                         team share code snippets fast and easily. Based on GitHub Gists Infrastructure which means you
-                        can use all your existing snippets by connecting your GitHub account!</p>
-                    <button class="bg-grey txt-white"><i class="icon-github"></i> GitHub</button>
-                    <button class="bg-sky txt-white"><i class="icon-twitter"></i> Twitter</button>
-                    <button class="bg-grey txt-white">Read more <i class="icon-arrow-right"></i></button>
-                </div>
-                <div class="w-col w-col-6 w-clearfix">
-                    <!--<img src="images/gisto.png">-->
-                    <iframe id="ytplayer" type="text/html" width="100%" height="230"
+                        can use all your existing snippets by connecting your GitHub account! <a href=""><b>More &raquo;</a></b></p>
+                    <iframe id="ytplayer" type="text/html" width="100%" height="500"
                             src="https://www.youtube.com/embed/lICNPYgv7Ac?controls=0&modestbranding=1&rel=0&showinfo=0&color=white&theme=light"
-                            frameborder="0" allowfullscreen>
-                        </iframe>
+                            frameborder="0"></iframe>
                 </div>
+
             </div>
         </div>
+
+
     </div>
 
 </section>
@@ -97,6 +95,7 @@
                     <i>Downloads, mirrors and prev. versions</i> <i class="icon-chevron-right"></i>
                 </span>
             </a>
+
         </div>
     </div>
 </section>
