Fix - Video auto grow on play and auto shrink in the end

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <button class="bg-sky txt-white"><i class="icon-twitter"></i> Twitter</button>
                     <button class="bg-grey txt-white">Read more <i class="icon-arrow-right"></i></button>
                 </div>
-                <div class="w-col w-col-6 w-clearfix" id="ytplayer">
+                <div class="w-col w-col-6 w-clearfix" id="ytplayerdiv">
                     <!--<img src="images/gisto.png">-->
                     <!--<iframe type="text/html" width="100%" height="230"
                             src="https://www.youtube.com/embed/lICNPYgv7Ac?controls=0&modestbranding=1&rel=0&showinfo=0&color=white&theme=light"
