Mobile enhancements and more layout additions/fixes

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
                     <p>Gisto is a Cross-platform gist snippets management desktop application that allows you and your
                         team share code snippets fast and easily. Based on GitHub Gists Infrastructure which means you
                         can use all your existing snippets by connecting your GitHub account!</p>
-                    <button class="bg-grey txt-white"><i class="icon-github"></i> GitHub</button>
-                    <button class="bg-sky txt-white"><i class="icon-twitter"></i> Twitter</button>
+                    <button class="bg-grey txt-white"><i class="icon-github"></i></button>
+                    <button class="bg-grey twitter txt-white"><i class="icon-twitter"></i></button>
+                    <button class="bg-grey fb txt-white"><i class="icon-facebook"></i></button>
+                    <button class="bg-grey gplus txt-white"><i class="icon-google-plus"></i></button>
                     <button class="bg-grey txt-white">Read more <i class="icon-arrow-right"></i></button>
                 </div>
                 <div class="w-col w-col-6 w-clearfix" id="ytplayerdiv">
@@ -103,9 +105,43 @@
     </div>
 </section>
 
+
+
+
+<h1>Features</h1>
 <section class="whiter boxes">
 
-    <h2>A bit about Gisto ...</h2>
+
+    <div class="w-container">
+        <div class="w-row">
+
+            <div class="w-col w-col-4 w-clearfix">
+                <img src="http://www.gistoapp.com/img/themes.png" width="270" height="201"  class="feat" />
+                <h3>Feature #1</h3>
+                <p>Feature number 1 from the list of features. Feature number 1 from the list of features. Feature number 1 from the list of features.</p>
+            </div>
+
+            <div class="w-col w-col-4 w-clearfix">
+                <img src="http://www.gistoapp.com/img/search.png" width="270" height="201"  class="feat" />
+                <h3>Feature #1</h3>
+                <p>Feature number 1 from the list of features. Feature number 1 from the list of features. Feature number 1 from the list of features.</p>
+            </div>
+
+            <div class="w-col w-col-4 w-clearfix">
+                <img src="http://www.gistoapp.com/img/tagging.png" width="270" height="201" class="feat" />
+                <h3>Feature #1</h3>
+                <p>Feature number 1 from the list of features. Feature number 1 from the list of features. Feature number 1 from the list of features.</p>
+            </div>
+
+
+        </div>
+    </div>
+</section>
+
+
+<h1>A bit about Gisto ...</h1>
+
+<section class="whiter boxes">
 
     <div class="w-container">
         <div class="w-row">
@@ -138,10 +174,10 @@
     </div>
 </section>
 
-
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-
+<div style="height:55px;"></div>
+<footer class="whiter">
+    <p>(c) 2013 Gisto</p>
+</footer>
 
 </body>
 </html>
