--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-wf-site="524b0c4c20cc877c19000161">
+<html>
 <head>
     <meta charset="utf-8">
     <title>Gisto | Snippets made awesome | Manage your github gists on desktop</title>
@@ -133,13 +133,13 @@
                 <p>Feature number 1 from the list of features. Feature number 1 from the list of features. Feature number 1 from the list of features.</p>
             </div>
 
-
         </div>
+        <button class="bg-grey txt-white btn-center">All features <i class="icon-arrow-right"></i></button>
     </div>
 </section>
 
 
-<h1>A bit about Gisto ...</h1>
+<h1>A bit about <span class="gisto">&lt;/Gisto&gt;</span></h1>
 
 <section class="whiter boxes">
 
@@ -149,30 +149,77 @@
             <div class="w-col w-col-4 w-clearfix">
                 <h3>The <b>why</b></h3>
 
-                <p>Gisto started as an attempt to fulfill the lack of a syntax highlighted and cloud synchronized code
-                    snippet solution.</p>
+                <p>Gisto started as an attempt to fulfill the lack of a syntax highlighted and cloud synchronized code snippet solution.
+
+                    You may think of Gisto as Evernote for code.</p>
             </div>
 
-            <div class="w-col w-col-4 w-clearfix">
-                <h3>The <b>how</b></h3>
-
-                <p>Based on GitHub Gists Infrastructure which means you can use all your existing snippets by connecting
-                    your GitHub account!</p>
-            </div>
-
-            <div class="w-col w-col-4 w-clearfix">
+            <div class="w-col w-col-4 w-clearfix the-who">
                 <h3>The <b>who</b></h3>
 
                 <p>
                     Gisto is developed by a team of two web developers and uses web standard technologies such as HTML5
                     and JavaScript.
                 </p>
+                <p class="txt-center">
+                    <a href="#"><img src="https://secure.gravatar.com/avatar/3a615b34ef2060face8fcd481c6377e1?s=48" alt="Maayan" title="Maayan" /></a>
+                    <a href="#"><img src="https://secure.gravatar.com/avatar/7ddad1a9a1c8de452badaf82b6c30c76?s=48" alt="Sasha" title="Sasha" /></a>
+                </p>
 
+            </div>
+
+            <div class="w-col w-col-4 w-clearfix">
+                <h3>The <b>how</b></h3>
+
+                <p>Gisto made using HTML5/CSS3 it is built with Angular.js on top of Node.js runned by node-webkit.
+                    Gisto also uses Angular UI, jQuery, Ace editor, showdown and Font-Awesome</p>
             </div>
 
         </div>
     </div>
 </section>
+
+
+<h1>Downloads</h1>
+<section class="whiter boxes">
+
+
+    <div class="w-container">
+        <div class="w-row">
+
+            <a href="#" class="download w-col w-col-3 w-clearfix txt-center">
+                <p><i class="icon-windows icon-4x"></i></p>
+                <h3>Windows<br /> <b>Download</b></h3>
+                <p class="txt-red" href="">v0.2.1b</p>
+                <p>Packed with automatic installer.</p>
+            </a>
+
+            <a href="#" class="download w-col w-col-3 w-clearfix txt-center">
+                <p class="txt-center"><i class="icon-apple icon-4x"></i></p>
+                <h3>OSX<br />  <b>Download</b></h3>
+                <p class="txt-red" href="">v0.2.1b</p>
+                <p class="txt-center">Packed with automatic installer.</p>
+            </a>
+
+            <a href="#" class="download w-col w-col-3 w-clearfix txt-center">
+                <p class="txt-center"><i class="icon-linux icon-4x"></i></p>
+                <h3>Linux 64bit<br />  <b>Download</b></h3>
+                <p class="txt-red" href="">v0.2.1b</p>
+                <p class="txt-center">Packed with automatic installer via shell.</p>
+            </a>
+
+            <a href="#" class="download w-col w-col-3 w-clearfix txt-center">
+                <p><i class="icon-linux icon-4x"></i></p>
+                <h3>Linux 32bit<br />  <b>Download</b></h3>
+                <p class="txt-red" href="">v0.2.1b</p>
+                <p>Packed with automatic installer via shell.</p>
+            </a>
+
+        </div>
+        <button class="bg-grey txt-white btn-center">Mirrors and prev. versions <i class="icon-arrow-right"></i></button>
+    </div>
+</section>
+
 
 <div style="height:55px;"></div>
 <footer class="whiter">
