Redesign WIP -CSS fixes

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 </section>
 
 
-<h1>A bit about <span class="gisto">&lt;/Gisto&gt;</span></h1>
+<h1>About <span class="gisto">&lt;/Gisto&gt;</span></h1>
 
 <section class="whiter boxes">
 
@@ -221,9 +221,9 @@
 </section>
 
 
-<div style="height:55px;"></div>
-<footer class="whiter">
-    <p>(c) 2013 Gisto</p>
+<div class="push"></div>
+<footer>
+    <p>&copy; 2013 Gisto</p>
 </footer>
 
 </body>
